[package]
name = "practicing-rust"
version = "0.1.0"
edition = "2021"
default-run = "practicing-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "ref"
path = "src/bin/ref.rs"

[[bin]]
name = "linked-list"
path = "src/bin/linked-list.rs"
