[package]
name = "practicing-rust"
version = "0.1.0"
edition = "2021"
default-run = "practicing-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[[bin]]
name = "ref"
path = "src/bin/ref.rs"
